fix reposive text align center (tiitle and content) for profile/you page

--- a/public/assets/css/careers_page.less
+++ b/public/assets/css/careers_page.less
@@ -1274,8 +1274,18 @@
 		.about_box{
 			.about_block{
 				padding:15px;
+				h2{
+					width: 100%;
+				}
+				.left_sb{
+					text-align: center;
+				}
 				.right_sb{
 					padding-right: 0;
+					text-align: center;
+					.about_img{
+						text-align: center;
+					}
 					.line-bar{
 						width: 68%;
 						.content{
@@ -1284,6 +1294,17 @@
 					}
 				}
 			}
+			.skin_tone{
+				.right_sb{
+					padding-right: 0;
+					padding-left: 20px;
+					text-align: center;
+					.about_img{
+						text-align: center;
+					}
+				}
+			}
+
 		}
 		#listBODYSHAPE{
 			.right_sb{
